# napari-NanoPyx

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/: build_deploy_pypi.yml
.github/workflows/: build_deploy_test_pypi.yml
.napari-hub/: DESCRIPTION.md
src/napari_nanopyx/: __init__.py  benchmarking.py  channel_alignment.py  channel_registration.py  drift_alignment.py  esrrf.py  main.py  napari.yaml  nlm_denoising.py  squirrel.py  srrf.py
src/napari_nanopyx_core/: channel_alignment.py  drift_alignment.py  main.py  napari.yaml
