[metadata]
name = napari-nanopyx
version = 0.0.3
description = napari plugin of Nanoscopy Python library (NanoPyx, the successor to NanoJ) - focused on light microscopy and super-resolution imaging
long_description = file: README.md
long_description_content_type = text/markdown

author = Ricardo Henriques, Bruno Saraiva, Inês Cunha, António Brito
author_email = bruno.msaraiva2@gmail.com
license = LGPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Testing

[options]
packages = find:

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-nanopyx = napari_nanopyx:napari.yaml

[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
